# ChangeLog for app-misc/cl-nettools-meta
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cl-nettools-meta-11.6-r1 (18 May 2011)

  18 May 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-nettools-meta-11.6.ebuild, +cl-nettools-meta-11.6-r1.ebuild:
  Add net-misc/vconfig

*cl-nettools-meta-11.6 (18 May 2011)

  18 May 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-nettools-meta-11.3-r1.ebuild, +cl-nettools-meta-11.6.ebuild:
  Version bump.

*cl-nettools-meta-11.3 (09 Mar 2011)

  09 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-nettools-meta-11.0-r5.ebuild, +cl-nettools-meta-11.3.ebuild:
  Version bump.

*cl-nettools-meta-11.0-r4 (27 Nov 2010)

  27 Nov 2010; Трацевский Александр
  <atratsevskiy@gentoo.org> -cl-nettools-meta-11.0-r3.ebuild,
  +cl-nettools-meta-11.0-r4.ebuild:
  Set NetworkManager for CLDX

*cl-nettools-meta-11.0-r3 (25 Nov 2010)

  25 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-nettools-meta-11.0-r2.ebuild, +cl-nettools-meta-11.0-r3.ebuild:
  Renamed USE flag to CDISTRO.

*cl-nettools-meta-11.0-r2 (24 Nov 2010)

  24 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-nettools-meta-11.0-r1.ebuild, +cl-nettools-meta-11.0-r2.ebuild:
  Removed wicd from CLD

*cl-nettools-meta-11.0-r1 (22 Nov 2010)

  22 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-nettools-meta-11.0.ebuild, +cl-nettools-meta-11.0-r1.ebuild:
  daily update

*cl-nettools-meta-11.0 (17 Nov 2010)

  17 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-nettools-meta-11.0.ebuild:
  New meta-package for Calculate Linux.
