@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-nettools-meta-11.6-r2 (28 Jun 2011)
+
+  28 Jun 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-nettools-meta-11.6-r1.ebuild, +cl-nettools-meta-11.6-r2.ebuild:
+  Add a networkmanager flag
+
 *cl-nettools-meta-11.6-r1 (18 May 2011)
 
   18 May 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
